답변 작성 후 해당 답변으로 스크롤 이동(앵커)